--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ button {
 .suggestion {
   height: 75px;
   line-height: 75px;
-  width: 650px;
+  max-width: 650px;
   margin: auto;
   background-color: #ececea;
   vertical-align: middle;
