Change Danisk abbreviation from dn to dk

--- a/style.css
+++ b/style.css
@@ -55,12 +55,12 @@ a.gr:visited {
   text-decoration: none;
 }
 
-a.dn:link {
+a.dk:link {
   color: #fbeb9a;
   text-decoration: none;
 }
 
-a.dn:visited {
+a.dk:visited {
   color: #fbeb9a;
   text-decoration: none;
 }
